--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     },
     "license": "MIT", 
     "homepage": "https://github.com/Ofdbey/TeaNode#readme",
+    "dependencies": {
+        "express": "^4.17.1"
+    }
     
 }
