--- a/package.json
+++ b/package.json
@@ -25,7 +25,21 @@
     "license": "MIT", 
     "homepage": "https://github.com/Ofdbey/TeaNode#readme",
     "dependencies": {
-        "express": "^4.17.1"
-    }
+        "express": "^4.17.1",
+        "react": "^18",
+        "react-dom": "^18",
+        "next": "14.1.1"
+    },
+    "devDependencies": {
+        "typescript": "^5",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "autoprefixer": "^10.0.1",
+        "postcss": "^8",
+        "tailwindcss": "^3.3.0",
+        "eslint": "^8",
+        "eslint-config-next": "14.1.1"
+    },
     
 }
