--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "dependencies": {
         "express": "^4.17.1",
         "react": "^18",
-        "react-dom": "^18",
+        "react-dom": "^18"
         
     },
     "devDependencies": {
@@ -40,6 +40,6 @@
         "tailwindcss": "^3.3.0",
         "eslint": "^8",
         "eslint-config-next": "14.1.1"
-    },
+    }
     
 }
